--- a/gobelin.html
+++ b/gobelin.html
@@ -40,8 +40,8 @@
                 <t1>Goblin</t1>
                 <p>Rejoignez des millions de joueurs dans le monde entier en</br>
                     construisant votre village,</br> élevez un clan et terminez en un Epic Clan Wars !!</p>
-                    <button href="#">COMPARE</button>
-                    <button href="#"><i class="ri-play-mini-fill"></i>WATCH GAMEPLAY</button>
+                    <div class="button" href="#">COMPARE</div>
+                    <div class="button"><i class="ri-play-mini-fill"></i>WATCH GAMEPLAY</div>
         <img src="/img/gobelin.html"></img>
     </div>
     <div class="icon">
