--- a/gobelin.html
+++ b/gobelin.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <title>Clash of Gobelin</title>
@@ -34,18 +38,25 @@
 </header>
 
 <body>
-    <div class="text">
-        <t5>#Tendance</h5>
+    <section>
+
+        <div class="text">
+            <t5>#Tendance</h5>
                 <t4>Dev Web Lens Production</t4>
                 <t1>Goblin</t1>
                 <p>Rejoignez des millions de joueurs dans le monde entier en</br>
                     construisant votre village,</br> élevez un clan et terminez en un Epic Clan Wars !!</p>
-                    <div class="button" href="#">COMPARE</div>
-                    <div class="button"><i class="ri-play-mini-fill"></i>WATCH GAMEPLAY</div>
-        <img src="/img/gobelin.html"></img>
-    </div>
+                <div class="button" href="#">COMPARE</div>
+                <div class="button"><i class="ri-play-mini-fill"></i>WATCH GAMEPLAY</div>
+                <div class="goblin">
+                    <img src="/img/gobelin.html"></img>
+                </div>
+        </div>
+    </section>
     <div class="icon">
-
+<!-- instagram -->
+<!-- Youtube -->
+<!-- Basket -->
     </div>
 </body>
 
