--- a/testgob.html
+++ b/testgob.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="teststyle.css">
+    <link rel="stylesheet" type="text/css" href="teststyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -40,16 +39,18 @@
                 construisant votre village,</br> élevez un clan et terminez en un Epic Clan Wars !!</p>
             <a href="#">COMPARE</a>
             <a class="button"><i class="ri-play-mini-fill"></i>WATCH GAMEPLAY</a>
-            <div class="goblin">
-                <img src="/img/gobelin.html"></img>
-            </div>
         </div>
+            <div class="goblin">
+                <img src="/img/goblins2-home.png"></img>
+            </div>
+        
     </section>
     <div class="icon">
         <!-- instagram -->
         <!-- Youtube -->
         <!-- Basket -->
     </div>
+</section>
     <script src="script.js"></script>
 </body>
 
