--- a/gobelin.html
+++ b/gobelin.html
@@ -3,61 +3,55 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Permanent+Marker&family=Roboto:ital,wght@1,100&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <title>Clash of Gobelin</title>
 </head>
 
 <header>
-    <h2 class="logo">Xelaanyle</h2>
-    <nav class="navlist">
-        <a class="navlink" href="#">Acceuil</a>
-        <a class="navlink" href="#">A propos</a>
-        <a class="navlink" href="#">Clans</a>
-        <a class="navlink" href="#">Hôtel de Ville</a>
-        <a class="navlink" href="#">Troupes</a>
-        <a class="navlink" href="#">Contact</a>
-    </nav>
-    <nav class="navburger">
-        <a class="navlink" href="#">Acceuil</a>
-        <a class="navlink" href="#">A propos</a>
-        <a class="navlink" href="#">Clans</a>
-        <a class="navlink" href="#">Hôtel de Ville</a>
-        <a class="navlink" href="#">Troupes</a>
-        <a class="navlink" href="#">Contact</a>
-    </nav>
+    <a href="#" class="logo">Xelaanyle</a>
+
+    <ul class="navlist">
+        <li><a href="#">Acceuil</a></li>
+        <li><a href="#">A propos</a></li>
+        <li><a href="#">Clans</a></li>
+        <li><a href="#">Hôtel de Ville</a></li>
+        <li><a href="#">Troupes</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+    <div class="bx bx-menu" id="menu-icon"></div>
 </header>
 
 <body>
-    <section>
-
+    <section class="main">
         <div class="text">
-            <t5>#Tendance</h5>
-                <t4>Dev Web Lens Production</t4>
-                <t1>Goblin</t1>
-                <p>Rejoignez des millions de joueurs dans le monde entier en</br>
-                    construisant votre village,</br> élevez un clan et terminez en un Epic Clan Wars !!</p>
-                <div class="button" href="#">COMPARE</div>
-                <div class="button"><i class="ri-play-mini-fill"></i>WATCH GAMEPLAY</div>
-                <div class="goblin">
-                    <img src="/img/gobelin.html"></img>
-                </div>
+            <h5>#Tendance</h5>
+            <h4>Dev Web Lens Production</h4>
+            <h1>Goblin</h1>
+            <p>Rejoignez des millions de joueurs dans le monde entier en</br>
+                construisant votre village,</br> élevez un clan et terminez en un Epic Clan Wars !!</p>
+            <a href="#">COMPARE</a>
+            <a class="button"><i class="ri-play-mini-fill"></i>WATCH GAMEPLAY</a>
         </div>
+            <div class="goblin">
+                <img src="/img/goblins2-home.png"></img>
+            </div>
+        
     </section>
     <div class="icon">
-<!-- instagram -->
-<!-- Youtube -->
-<!-- Basket -->
+        <!-- instagram -->
+        <!-- Youtube -->
+        <!-- Basket -->
     </div>
+</section>
+    <script src="script.js"></script>
 </body>
 
 </html>
