--- a/testgob.html
+++ b/testgob.html
@@ -34,23 +34,27 @@
         <div class="text">
             <h5>#Tendance</h5>
             <h4>Dev Web Lens Production</h4>
-            <h1>Goblin</h1>
+            <h1>Goblins</h1>
             <p>Rejoignez des millions de joueurs dans le monde entier en</br>
                 construisant votre village,</br> élevez un clan et terminez en un Epic Clan Wars !!</p>
             <a href="#">COMPARE</a>
-            <a class="button"><i class="ri-play-mini-fill"></i>WATCH GAMEPLAY</a>
+            <a href="#" class="button"><i class="ri-play-mini-fill"></i>WATCH GAMEPLAY</a>
         </div>
-            <div class="goblin">
-                <img src="/img/goblins2-home.png"></img>
-            </div>
-        
+        <div class="goblin">
+            <img src="/img/goblins2-home.png"></img>
+        </div>
     </section>
     <div class="icon">
         <!-- instagram -->
+        <a href="#"><i class="ri-instagram-line"></i></a>
         <!-- Youtube -->
+        <a href="#"><i class="ri-youtube-line"></i></a>
         <!-- Basket -->
+        <a href="#"><i class="ri-basketball-line"></i></a>
     </div>
-</section>
+    <div class="scroll">
+        <a href="#"><i class="ri-arrow-down-s-fill"></i></a>
+    </div>
     <script src="script.js"></script>
 </body>
 
