--- a/testgob.html
+++ b/testgob.html
@@ -13,23 +13,27 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <title>Clash of Gobelin</title>
+    <script src="https://unpkg.com/scrollreveal@4"></script>
+    
+
 </head>
+<body>
 
 <header>
     <a href="#" class="logo">Xelaanyle</a>
 
     <ul class="navlist">
-        <li><a class="navlink" href="#">Acceuil</a></li>
-        <li><a class="navlink" href="#">A propos</a></li>
-        <li><a class="navlink" href="#">Clans</a></li>
-        <li><a class="navlink" href="#">Hôtel de Ville</a></li>
-        <li><a class="navlink" href="#">Troupes</a></li>
-        <li><a class="navlink" href="#">Contact</a></li>
+        <li><a href="#">Acceuil</a></li>
+        <li><a href="#">A propos</a></li>
+        <li><a href="#">Clans</a></li>
+        <li><a href="#">Hôtel de Ville</a></li>
+        <li><a href="#">Troupes</a></li>
+        <li><a href="#">Contact</a></li>
     </ul>
+
     <div class="bx bx-menu" id="menu-icon"></div>
 </header>
 
-<body>
     <section class="main">
         <div class="text">
             <h5>#Tendance</h5>
@@ -38,12 +42,14 @@
             <p>Rejoignez des millions de joueurs dans le monde entier en</br>
                 construisant votre village,</br> élevez un clan et terminez en un Epic Clan Wars !!</p>
             <a href="#">COMPARE</a>
-            <a href="#" class="button"><i class="ri-play-mini-fill"></i>WATCH GAMEPLAY</a>
+            <a href="#" class="ctaa"><i class="ri-play-fill"></i>WATCH GAMEPLAY</a>
         </div>
+
         <div class="goblin">
             <img src="/img/goblins2-home.png"></img>
         </div>
     </section>
+
     <div class="icon">
         <!-- instagram -->
         <a href="#"><i class="ri-instagram-line"></i></a>
@@ -52,10 +58,14 @@
         <!-- Basket -->
         <a href="#"><i class="ri-basketball-line"></i></a>
     </div>
+
     <div class="scroll">
         <a href="#"><i class="ri-arrow-down-s-fill"></i></a>
     </div>
+
     <script src="script.js"></script>
+
+    <script src="https://unpkg.com/scrollreveal"></script>
 </body>
 
 </html>
