--- a/testgob.html
+++ b/testgob.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="goblin">
-            <img src="/img/goblins2-home.png"></img>
+            <img src="img/goblins2-home.png"></img>
         </div>
     </section>
 
